# TSLCompiler

./: .gitignore  README.md  linux-build.ini  macos-build.ini  meson.build  meson.options
.github/workflows/: action.yml  ci-cd.yml  ci.yml  setup-build.yml  windows_ci-cd.yml  windows_ci.yml
docs/: USER_MANUAL.md
examples/: Siena
examples/grep/: 4.spec.const.single
include/: compiler.hpp  error_reporting.hpp  expressions.hpp  filetracker.hpp  lexer_tokens.hpp  parse_tree.hpp  tsl_choice_graph.hpp  tsl_collector.hpp  tsl_compiler.hpp  tsl_grammar.hpp  tsl_lexer.hpp  tsl_parser.hpp  tsl_testcase.hpp
src/: compiler.cpp  filetracker.cpp  lexer.l  meson.build  parse_tree.cpp  parser.yy  tsl.l  tsl_collector.cpp  tsl_compiler.cpp  tsl_lexer.cpp
src/compiler/: meson.build  tsl_choice_graph.cpp  tsl_compiler.cpp  tsl_testcase.cpp
src/lexer/: lexer.l  meson.build  tsl_lexer.cpp
src/parser/: error_reporting.cpp  expressions.cpp  meson.build  parser.yy  tsl_collector.cpp  tsl_grammar.cpp  tsl_parser.cpp
src/results/: meson.build  tsl_choice_graph.cpp  tsl_collector.cpp  tsl_testcase.cpp
subprojects/: args.wrap  ut.wrap
tests/: compiler-arguments.cpp  errors.cpp  errors_ut.cpp  meson.build  tslchoicegraph.cpp  tslcompiler.cpp  tslcompiler_ut.cpp  tsllexer.cpp  tsllexer_ut.cpp  tslparser.cpp  tslparser_ut.cpp
tests/feature-files/: compiler-arguments.feature  errors.feature  tslchoicegraph.feature  tslcompiler.feature  tsllexer.feature  tslparser.feature
tests/test-files/: categories_with_na.txt  category_with_error_splitting_choices.txt  category_with_long_if.txt  category_with_na.txt  chained_choices_with_if.txt  choice_chosen_from_else_statement.txt  choice_with_and_expression.txt  choice_with_conditional_error_marker.txt  choice_with_conditional_single_marker.txt  choice_with_else_alone.txt  choice_with_error_in_else.txt  choice_with_error_in_if.txt  choice_with_grouped_expression.txt  choice_with_if_label_else.txt  choice_with_multiple_properties.txt  choice_with_one_property.txt  choice_with_or_expression.txt  choice_with_property_in_else.txt  choice_with_property_in_if.txt  choice_with_single_in_else.txt  choice_with_single_in_if.txt  choice_with_unary_expression.txt  choices_with_multiple_markers.txt  choices_with_simple_if.txt  complex-if-else.txt  conditional_marker_deadend.txt  defined_property_used_in_same_category.txt  duplicate_cases_from_nas.txt  duplicate_categories.txt  duplicate_property.txt  invalid_choice.txt  invalid_double_marking.txt  invalid_property_then_if.txt  markers_found_in_order.txt  markers_not_visited_twice.txt  negated-and-group.txt  negated-and-statement.txt  one_category_choice_with_error_marking.txt  one_category_choice_with_marking.txt  one_category_choices_with_single_and_error_markings.txt  (+3 more)
